force-app/main/default/objects/Account/fields/accountEmail__c.field-meta.xml
<CustomField>
    <fullName>accountEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>