force-app/main/default/objects/Account/fields/Billing_Address_Formula__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Formula__c</fullName>
    <description>system formula to get account billing address to one field</description>
    <formula>/* 2 SUBSTITUTE is way to remove trailing comma &quot;Kystvejen 42, Kastrup, &quot; to &quot;Kystvejen 42, Kastrup&quot; */
SUBSTITUTE (
SUBSTITUTE ( 
    Name + &quot;, &quot;
	+ IF (ISBLANK(BillingStreet),NULL,BillingStreet + &quot;, &quot;)
    + IF (ISBLANK(BillingCity),NULL,BillingCity + &quot;, &quot;)
    + IF (ISBLANK(BillingPostalCode),NULL,BillingPostalCode + &quot;, &quot;)
    + IF (ISBLANK(BillingCountry),NULL,BillingCountry + &quot;, &quot;)
/* added some specific charactes to detect last trailing comma */				
				+ &quot;.*.&quot;,
&quot;, .*.&quot;, NULL),
&quot;.*.&quot;, NULL)</formula>
    <inlineHelpText>system formula to get account billing address to one field</inlineHelpText>
    <label>Billing Address Formula</label>
    <type>Text</type>
</CustomField>