force-app/main/default/objects/Account/fields/bookingPortalLink__c.field-meta.xml
<CustomField>
    <fullName>bookingPortalLink__c</fullName>
    <description>The Booking Portal there are hosted by SIXT SE</description>
    <label>Booking Portal Link</label>
    <type>Url</type>
</CustomField>