force-app/main/default/objects/Account/fields/bookingPortalPassword__c.field-meta.xml
<CustomField>
    <fullName>bookingPortalPassword__c</fullName>
    <description>The Password for the Booking Portal provided by Sixt SE</description>
    <label>Booking Portal Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>