force-app/main/default/objects/Account/fields/bookingPortalUsername__c.field-meta.xml
<CustomField>
    <fullName>bookingPortalUsername__c</fullName>
    <label>Booking Portal Username</label>
    <length>25</length>
    <type>Text</type>
</CustomField>