force-app/main/default/objects/Account/fields/Cars_defleeted_from_Jy__c.field-meta.xml
<CustomField>
    <fullName>Cars_defleeted_from_Jy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cars defleeted from Jylland</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Cars defleeted from Jylland)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>