force-app/main/default/objects/Account/fields/Cars_defleeted_from_Sj__c.field-meta.xml
<CustomField>
    <fullName>Cars_defleeted_from_Sj__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cars defleeted from Sjælland</description>
    <label>Cars defleeted from Sjælland</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>