force-app/main/default/objects/Account/fields/countryCode__c.field-meta.xml
<CustomField>
    <fullName>countryCode__c</fullName>
    <label>Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>