force-app/main/default/objects/Account/fields/CVR__c.field-meta.xml
<CustomField>
    <fullName>CVR__c</fullName>
    <label>CVR</label>
    <length>25</length>
    <type>Text</type>
</CustomField>