force-app/main/default/objects/Account/fields/Damage_check_at_DAL_is_required__c.field-meta.xml
<CustomField>
    <fullName>Damage_check_at_DAL_is_required__c</fullName>
    <label>Damage check at DAL is required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>