force-app/main/default/objects/Account/fields/EUR_DKK__c.field-meta.xml
<CustomField>
    <fullName>EUR_DKK__c</fullName>
    <label>EUR/DKK</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>DKK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>