force-app/main/default/objects/Account/fields/External_Name__c.field-meta.xml
<CustomField>
    <fullName>External_Name__c</fullName>
    <description>to enable import of vehicles from csv with reference to dealer and leasing company</description>
    <externalId>true</externalId>
    <inlineHelpText>to enable import of vehicles from csv with reference to dealer and leasing company</inlineHelpText>
    <label>External Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>