force-app/main/default/objects/Account/fields/Internal_Station_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Station_Number__c</fullName>
    <description>identifies station in SIXT internal systems (COBRA)</description>
    <inlineHelpText>identifies station in SIXT internal systems (COBRA)</inlineHelpText>
    <label>Internal Station Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>