force-app/main/default/objects/Account/fields/Invoice_or_advis__c.field-meta.xml
<CustomField>
    <fullName>Invoice_or_advis__c</fullName>
    <label>Invoice or advis?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Advis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>