force-app/main/default/objects/Account/fields/Last_Rental_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Last_Rental_Agreement__c</fullName>
    <description>This field is used for external lookup from Cobra and to map with phone system Dixa.</description>
    <externalId>true</externalId>
    <label>Last Rental Agreement</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>