force-app/main/default/objects/Account/fields/Leasing_Algorithm__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Algorithm__c</fullName>
    <description>type of algorithm that is used by this leasing partner
1 - PMT (or PMT + L94)</description>
    <inlineHelpText>type of algorithm that is used by this leasing partner
1 - PMT (or PMT + L94)</inlineHelpText>
    <label>Leasing Algorithm</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>