force-app/main/default/objects/Account/fields/Leasing_contract_fee__c.field-meta.xml
<CustomField>
    <fullName>Leasing_contract_fee__c</fullName>
    <description>This is the contact leasing fee for each contract from this leasing company</description>
    <label>Leasing contract fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>