force-app/main/default/objects/Account/fields/Leasing_contract_fee_valuta__c.field-meta.xml
<CustomField>
    <fullName>Leasing_contract_fee_valuta__c</fullName>
    <label>Leasing contract fee (Valuta)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>