force-app/main/default/objects/Account/fields/Leasing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Rate__c</fullName>
    <label>Leasing Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>