force-app/main/default/objects/Account/fields/Leasing_Rate_Valuta__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Rate_Valuta__c</fullName>
    <label>Leasing Rate (Valuta)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>