force-app/main/default/objects/Account/fields/naceCode__c.field-meta.xml
<CustomField>
    <fullName>naceCode__c</fullName>
    <label>NACE-Code</label>
    <type>TextArea</type>
</CustomField>