force-app/main/default/objects/Account/fields/Navision_Account__c.field-meta.xml
<CustomField>
    <fullName>Navision_Account__c</fullName>
    <description>Account number from Navision</description>
    <label>Navision Account #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>