force-app/main/default/objects/Account/fields/priceStructure__c.field-meta.xml
<CustomField>
    <fullName>priceStructure__c</fullName>
    <description>Define which category the company should be in.</description>
    <label>Price Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Rate -5%</fullName>
            </value>
            <value>
                <fullName>Public Rate -10%</fullName>
            </value>
            <value>
                <fullName>Public Rate -15%</fullName>
            </value>
            <value>
                <fullName>Corporate rates</fullName>
            </value>
            <value>
                <fullName>Local Rates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>