force-app/main/default/objects/Account/fields/Station_Account_Num__c.field-meta.xml
<CustomField>
    <fullName>Station_Account_Num__c</fullName>
    <description>station&apos;s Cobra ID</description>
    <externalId>true</externalId>
    <inlineHelpText>station&apos;s Cobra ID</inlineHelpText>
    <label>Station Account Num</label>
    <length>255</length>
    <type>Text</type>
</CustomField>