force-app/main/default/objects/Account/fields/Support_owner__c.field-meta.xml
<CustomField>
    <fullName>Support_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support owner</label>
    <referenceTo>Account_Contact_Support__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>