force-app/main/default/objects/Account/fields/taxNumber__c.field-meta.xml
<CustomField>
    <fullName>taxNumber__c</fullName>
    <label>Tax number</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>