force-app/main/default/objects/Account/fields/vatNumberCompany__c.field-meta.xml
<CustomField>
    <fullName>vatNumberCompany__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>VAT Number Account</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>