force-app/main/default/objects/Account/recordTypes/Dealer_Importer.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Importer</fullName>
    <active>true</active>
    <label>Dealer/Importer</label>
</RecordType>