force-app/main/default/objects/Account/recordTypes/Leasing_Company.recordType-meta.xml
<RecordType>
    <fullName>Leasing_Company</fullName>
    <active>true</active>
    <label>Leasing Company</label>
</RecordType>