force-app/main/default/objects/Account/recordTypes/Station.recordType-meta.xml
<RecordType>
    <fullName>Station</fullName>
    <active>true</active>
    <label>Station</label>
</RecordType>