force-app/main/default/objects/Account/recordTypes/Transporter.recordType-meta.xml
<RecordType>
    <fullName>Transporter</fullName>
    <active>true</active>
    <label>Transporter</label>
</RecordType>