force-app/main/default/objects/Account/validationRules/Invoice_or_advis_required_for_buyer.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoice_or_advis_required_for_buyer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Type , &apos;Vehicle Buyer&apos;),
  ISPICKVAL( Invoice_or_advis__c , &apos;&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Invoice_or_advis__c</errorDisplayField>
    <errorMessage>The buyer account requires invoice or advis chosen.</errorMessage>
</ValidationRule>