force-app/main/default/objects/Account/listViews/Alle_Forhandlere_Import_rer.listView-meta.xml
<ListView>
    <fullName>Alle_Forhandlere_Import_rer</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Dealer_Importer</value>
    </filters>
    <label>Alle Forhandlere/Importører</label>
</ListView>