force-app/main/default/objects/Account/listViews/Alle_Leasingselskaber.listView-meta.xml
<ListView>
    <fullName>Alle_Leasingselskaber</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Leasing_Company</value>
    </filters>
    <label>Alle Leasingselskaber</label>
</ListView>