force-app/main/default/objects/Account/listViews/Alle_Sixt_Filialer.listView-meta.xml
<ListView>
    <fullName>Alle_Sixt_Filialer</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Internal_Station_Number__c</columns>
    <columns>Station_Account_Num__c</columns>
    <columns>Region__c</columns>
    <columns>Billing_Address_Formula__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Station</value>
    </filters>
    <label>Alle Sixt Filialer</label>
</ListView>