force-app/main/default/objects/Account/listViews/Alle_Tilbagek_bere.listView-meta.xml
<ListView>
    <fullName>Alle_Tilbagek_bere</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Invoice_or_advis__c</columns>
    <columns>EUR_DKK__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Buyer</value>
    </filters>
    <label>Alle Tilbagekøbere</label>
</ListView>